# pilot-agent-factory

./: .gitignore  AGENTS.md  GOAL.md  ONESHOT.md  README-ko.md  README.md
app/backend/: dev.sh  pyproject.toml
app/backend/src/agent_factory_backend/: __init__.py  server.py
app/frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/frontend/src/app/: layout.tsx  page.tsx
app/frontend/src/components/ai-elements/: prompt-input.tsx  tool.tsx
app/frontend/src/components/custom/: active-agent.tsx  agent-card.tsx  artifacts-card.tsx  chat-message.tsx  graph-view.tsx  notice-card.tsx  route-step.tsx  thinking-shimmer.tsx  tool-call.tsx
app/frontend/src/hooks/: use-supervisor-chat.ts
docs/: 01-architecture-ko.md  01-architecture.md  02-writing-an-agent-ko.md  02-writing-an-agent.md  03-webapp-ko.md  03-webapp.md  04-phase5-plan-ko.md  04-phase5-plan.md  README.md
src/: .env.sample  doctor.py  main.py  pyproject.toml
src/dropins/: agent_pirate.py
src/tests/: test_agents.py  test_contract.py  test_deep.py  test_loader.py  test_supervisor.py
