[project]
name = "agent-factory-backend"
version = "0.1.0"
description = "FastAPI backend exposing the agent-factory registry and supervisor over HTTP"
requires-python = ">=3.14,<3.15"
dependencies = [
    "agent-factory-sdk",
    "agent-chitchat",
    "agent-calculator",
    "agent-summarizer",
    "fastapi[standard]>=0.115",
    "python-dotenv>=1.0.0",
]

# The backend lives OUTSIDE the src/ workspace on purpose: it consumes the
# platform packages exactly like an external service would (path deps here;
# a private index in Phase 5).
[tool.uv.sources]
agent-factory-sdk = { path = "../../src/packages/agent-factory-sdk", editable = true }
agent-chitchat = { path = "../../src/packages/agent-chitchat", editable = true }
agent-calculator = { path = "../../src/packages/agent-calculator", editable = true }
agent-summarizer = { path = "../../src/packages/agent-summarizer", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_factory_backend"]
